--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -20,3 +20,4 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           author-email: "78953241+scala-ojisan[bot]@users.noreply.github.com"
           author-name: "scala-ojisan[bot]"
+          repos-file: "$GITHUB_WORKSPACE/repos.md"
