--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -14,10 +14,12 @@ jobs:
         with:
           app_id: ${{ secrets.SCALA_OJISAN_APP_ID }}
           private_key: ${{ secrets.SCALA_OJISAN_PRIVATE_KEY }}
+      # Need to checkout to read the markdown file
+      - uses: actions/checkout@v2
       - name: Launch Scala Steward
         uses: scala-steward-org/scala-steward-action@v2
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
           author-email: "78953241+scala-ojisan[bot]@users.noreply.github.com"
           author-name: "scala-ojisan[bot]"
-          repos-file: "$GITHUB_WORKSPACE/repos.md"
+          repos-file: "repos.md"
