--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -23,3 +23,4 @@ jobs:
           author-email: "78953241+scala-ojisan[bot]@users.noreply.github.com"
           author-name: "scala-ojisan[bot]"
           repos-file: "repos.md"
+          sign-commits: true
