--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -16,6 +16,7 @@ jobs:
           private_key: ${{ secrets.SCALA_OJISAN_PRIVATE_KEY }}
       # Need to checkout to read the markdown file
       - uses: actions/checkout@v2
+      - run: wget https://raw.githubusercontent.com/scala-steward-org/scala-steward/master/modules/core/src/main/resources/artifact-migrations.conf
       - name: Launch Scala Steward
         uses: scala-steward-org/scala-steward-action@v2
         with:
@@ -23,3 +24,4 @@ jobs:
           author-email: "78953241+scala-ojisan[bot]@users.noreply.github.com"
           author-name: "scala-ojisan[bot]"
           repos-file: "repos.md"
+          artifact-migrations: artifact-migrations.conf
